--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,20 @@
-<h1>home page</h1>
+<div class="mt4">
+    <div class="row">
+        {{#each courses}}
+        <div class="mt-4 col-sm-6 col-lg-4">
+            <div class="card" style="width: 18rem;">
+                <a href="/courses/{{this.slug}}">
+                <img src="{{this.image}}" class="card-img-top" alt="...">
+                </a>
+                <div class="card-body">
+                    <a style="color: black; text-decoration:none" href="/courses/{{this.slug}}">
+                    <h5 class="card-title">{{this.name}}</h5>
+                    </a>
+                    <p class="card-text">{{this.decription}}</p>
+                    <a href="#" class="btn btn-primary">Mua khóa học</a>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+    </div>
+</div>
