--- a/src/resources/views/me/storeCourses.hbs
+++ b/src/resources/views/me/storeCourses.hbs
@@ -20,10 +20,53 @@
             <td>{{this.createdAt}}</td>
             <td>
                 <a href="/courses/{{this._id}}/edit" class="btn btn-link">Sửa</a>
-                <a href="" class="btn btn-link">Xóa</a>
+                <a href="" class="btn btn-link delete" data-bs-toggle="modal" data-bs-target="#delete-course-modal" data-id= "{{this._id}}">Xóa</a>
             </td>
             </tr>
             {{/each}}
         </tbody>
     </table>
 </div>
+
+{{!-- delete modal --}}
+
+<div id="delete-course-modal" class="modal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Xóa khóa học</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Bạn đã chắc chắn chưa?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger ok">Xóa</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<form class="form-delete" method="post"></form>
+
+<script>
+
+    var btnDeletes = document.querySelectorAll('.delete');
+    var btnOks = document.querySelector('.ok');
+    console.log(btnOks)
+    var formElement = document.querySelector('.form-delete');
+    var id;
+ 
+    btnDeletes.forEach(btnDelete => {
+        btnDelete.onclick = function () {
+          id = btnDelete.getAttribute('data-id');
+        }
+    })
+
+    btnOks.onclick = function () {
+      formElement.setAttribute('action', '/courses/'+ id + '?_method=DELETE');
+      formElement.submit();
+    }
+
+</script>
