--- a/src/resources/views/courses/edit.hbs
+++ b/src/resources/views/courses/edit.hbs
@@ -1,25 +1,24 @@
 <div class="mt-4">
-    <form method="POST" action="/courses/{{course._id}}?_method=PUT">
-        <div class="mb-3">
-            <label for="name" class="form-label">Tên Khóa học</label>
-            <input value="{{course.name}}" type="text" name="name" class="form-control" id="name">
-        </div>
+    <h3>Cập nhật khóa học</h3>
 
-        <div class="mb-3">
-            <label for="decription" class="form-label">Mô tả</label>
-            <textarea type="text" name="decription" class="form-control" id="decription">{{course.decription}}</textarea>
+    <form class="mt-4" method="POST" action="/courses/{{course._id}}?_method=PUT">
+        <div class="form-group">
+            <label for="name">Tên khóa học</label>
+            <input type="text" class="form-control" value="{{course.name}}" id="name" name="name">
         </div>
-
-        <div class="mb-3">
-            <label for="videoID" class="form-label">Video ID</label>
-            <input value="{{course.videoID}}" type="text" name="videoID" class="form-control" id="videoID">
+        <div class="form-group">
+            <label for="description">Mô tả</label>
+            <textarea class="form-control" id="description" name="description">{{course.description}}</textarea>
         </div>
-
-        <div class="mb-3">
-            <label for="level" class="form-label">Level</label>
-            <input value="{{course.level}}" type="text" name="level" class="form-control" id="level">
+        <div class="form-group">
+            <label for="videoId">Video ID</label>
+            <input type="text" class="form-control" value="{{course.videoId}}" id="videoId" name="videoId">
         </div>
-
-        <button type="submit" class="btn btn-primary">Lưu</button>
-</form>
+        <div class="form-group">
+            <label for="level">Trình độ</label>
+            <input type="text" class="form-control" value="{{course.level}}" id="level" name="level">
+        </div>
+        
+        <button type="submit" class="btn btn-primary">Lưu lại</button>
+    </form>
 </div>
