--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,4 +1,12 @@
-#logo {
-  width: 45px;
-  height: 45px;
+@import 'variables';
+
+.card-course-item {
+    margin-top: 16px;
+}
+
+.user-avatar {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-right: 4px;
 }
