--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,20 +1,22 @@
-<div class="mt4">
+<div class="mt-4">
     <div class="row">
+
         {{#each courses}}
-        <div class="mt-4 col-sm-6 col-lg-4">
-            <div class="card" style="width: 18rem;">
+        <div class="col-sm-6 col-lg-4">
+            <div class="card card-course-item">
                 <a href="/courses/{{this.slug}}">
-                <img src="{{this.image}}" class="card-img-top" alt="...">
+                    <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
                 </a>
                 <div class="card-body">
-                    <a style="color: black; text-decoration:none" href="/courses/{{this.slug}}">
-                    <h5 class="card-title">{{this.name}}</h5>
+                    <a href="/courses/{{this.slug}}">
+                        <h5 class="card-title">{{this.name}}</h5>
                     </a>
-                    <p class="card-text">{{this.decription}}</p>
+                    <p class="card-text">{{this.description}}</p>
                     <a href="#" class="btn btn-primary">Mua khóa học</a>
                 </div>
             </div>
         </div>
         {{/each}}
+
     </div>
 </div>
