--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{title}} FPT</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/logo.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -13,13 +13,18 @@
 
 <body>
     <div class="app">
+        {{#if showLayout }}
         {{> header}}
+        {{/if}}
 
         <div class="container">
             {{{body}}}
         </div>
 
+
+        {{#if showLayout}}
         {{> footer}}
+        {{/if}}
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
