--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -11,9 +11,8 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            <img src="https://avatar-redirect.appspot.com/google/109023826614717592641?size=400" alt=""
-              class="user-avatar" />
-            Thanh Tùng
+            <img src={{user.avatar}} alt="avatar" class="user-avatar" />
+            {{user.fullname}}
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/courses/create">Đăng khóa học</a>
@@ -21,10 +20,34 @@
             <a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a>
             <a class="dropdown-item" href="/me/stored/news">Bài viết của tôi</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Đăng xuất</a>
+            <a class="dropdown-item logout" href="#">Đăng xuất</a>
           </div>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+
+<form class="form-logout" method="post"></form>
+
+<style>
+  .user-avatar {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 4px;
+  }
+</style>
+
+<script>
+
+  var btnLogout = document.querySelector('.logout');
+  var formElement = document.querySelector('.form-logout');
+
+
+  btnLogout.onclick = function () {
+    formElement.setAttribute('action', `/auth/logout`);
+    formElement.submit();
+  }
+
+</script>
